[package]
name = "parser-pda"
version = "0.1.6"
authors = ["Yury <yury.yukhananov@tutanota.com>"]
edition = "2018"
description = "Example of a simple parser pushdown automaton implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Retamogordo/parser-pda"
keywords = ["parser", "pushdown-automaton", "nested", "fsm", "finite-state-machine"]

[dependencies]
fi-night = {version = "0.1.6", features = ["fsm_gen_code"]}
convert_case = "0.4.0"
substring = "1.4.5"
strum_macros = "0.18.0"

